manifests/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: crash-course
spec:
  replicas: 1
  selector:
    matchLabels: { app: auth-service }
  template:
    metadata:
      labels: { app: auth-service }
    spec:
      containers:
      - name: auth-service
        image: 408009925873.dkr.ecr.ap-south-1.amazonaws.com/auth-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
