manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: crash-course
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
      - name: frontend
        image: IMAGE_REGISTRY/frontend:IMAGE_TAG
        imagePullPolicy: Always
        ports: [{ containerPort: 80 }]
